fix overflow

--- a/src/client/src/components/patientmodal/Modal.scss
+++ b/src/client/src/components/patientmodal/Modal.scss
@@ -8,9 +8,13 @@
     top: 0%;
     
   }
+
+  .modal display-block{
+    overflow-y: auto;
+    margin: auto;
+  }
   
   .modal-main {
-    position:fixed;
     background: linear-gradient(90deg, rgba(249,230,213,1) 12%, rgba(233,250,255,1) 55%);
     background: rgb(247, 247, 247);
     width: 100%;
@@ -30,19 +34,23 @@
     padding-right: 30px;
     overflow-y: auto;
     font-family: 'IBM Plex Sans Condensed', sans-serif;
+    margin: 0 auto;
   }
   
 
   .modal_content {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    top: 50%;
-    left: 50%;
+    // display: flex;
+    // flex-direction: column;
+    // position: relative;
+    // top: 50%;
+    // left: 50%;
     
-    transform: translate(-50%, -50%);
-    overflow: 'auto';
-    width: 100%;
+    // transform: translate(-50%, -50%);
+    // overflow: 'auto';
+    // width: 100%;
+    // margin: 0 auto;
+    margin-bottom: 40px;
+    margin-top: 40px;
   }
   .patient-field{
       padding-top: 10px;
